--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ progress{width:100%;height:20px}
 <h2>Electivas y Formación Humanística</h2>
 <div class="semestre">
   <div class="materia"><label><input type="checkbox" data-creditos="4"> Electivas de Complementación</label><span>4 créditos</span></div>
-  <div class="materia"><label><input type="checkbox" data-creditos="2"> Formación Humanística I</label><span>2</span></div>
-  <div class="materia"><label><input type="checkbox" data-creditos="2"> Formación Humanística II</label><span>2</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="2"> Lectura y produccion de textos I</label><span>2</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="2"> Lectura y produccion de textos II</label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Formación Ciudadana</label><span>2</span></div>
-  <div class="materia"><label><input type="checkbox" data-creditos="2"> Problemáticas de Contexto</label><span>2</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="2"> Formacion en Problemáticas de Contexto</label><span>2</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="2"> Formacion en Humanismo </label><span>2</span></div>
+   <div class="materia"><label><input type="checkbox" data-creditos="2"> Formacion en Cultura artistica y fisica </label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Historia Política</label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Epistemología</label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="4"> Ética y Compromiso Social</label><span>4</span></div>
