--- a/index.html
+++ b/index.html
@@ -3,27 +3,95 @@
 <head>
 <meta charset="UTF-8">
 <title>Malla Curricular Mercadeo</title>
+
 <style>
-body{font-family:Arial;background:#f6f6f6;padding:20px}
-h1,h2{color:#333}
-.semestre{background:#fff;border-radius:10px;padding:15px;margin-bottom:15px}
-.materia{display:flex;justify-content:space-between;align-items:center;margin:5px 0}
-.bloqueada{opacity:.4}
-progress{width:100%;height:20px}
-.creditos{font-size:14px;color:#666}
+body{
+  font-family:'Poppins', Arial, sans-serif;
+  background:linear-gradient(180deg,#ffe6f0,#fff);
+  padding:20px;
+  color:#4a2c3a;
+}
+
+h1{
+  text-align:center;
+  color:#d63384;
+  font-size:32px;
+}
+
+h2{
+  color:#c2185b;
+}
+
+.semestre{
+  background:#fff0f6;
+  border-radius:20px;
+  padding:15px;
+  margin-bottom:20px;
+  box-shadow:0 6px 15px rgba(214,51,132,.15);
+}
+
+.materia{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin:6px 0;
+  background:#ffffff;
+  padding:8px 12px;
+  border-radius:12px;
+}
+
+.materia label{
+  cursor:pointer;
+}
+
+input[type=checkbox]{
+  accent-color:#d63384;
+  transform:scale(1.2);
+  margin-right:8px;
+}
+
+progress{
+  width:100%;
+  height:22px;
+  border-radius:20px;
+  overflow:hidden;
+}
+
+progress::-webkit-progress-bar{
+  background:#ffd6e8;
+  border-radius:20px;
+}
+
+progress::-webkit-progress-value{
+  background:linear-gradient(90deg,#ff69b4,#d63384);
+  border-radius:20px;
+}
+
+#porcentaje{
+  text-align:center;
+  font-weight:bold;
+  color:#c2185b;
+  margin-bottom:20px;
+}
+
+.creditos{
+  font-size:13px;
+}
 </style>
 </head>
+
 <body>
 
-<h1>Malla Curricular – Mercadeo</h1>
+<h1>💗 Malla Curricular Mercadeo 💗</h1>
+
 <progress id="barra" value="0" max="165"></progress>
-<p id="porcentaje">0%</p>
+<p id="porcentaje">0% completado</p>
 
 <div id="malla"></div>
 
-<h2>Electivas y Formación Humanística</h2>
+<h2>✨ Electivas & Humanísticas ✨</h2>
 <div class="semestre">
-  <div class="materia"><label><input type="checkbox" data-creditos="4"> Electivas de Complementación</label><span>4 créditos</span></div>
+ <div class="materia"><label><input type="checkbox" data-creditos="4"> Electivas de Complementación</label><span>4 créditos</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Lectura y produccion de textos I</label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Lectura y produccion de textos II</label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Formación Ciudadana</label><span>2</span></div>
@@ -36,102 +104,42 @@ progress{width:100%;height:20px}
 </div>
 
 <script>
-const semestres = [
-{n:1,m:[
-["Fundamentos de Mercadeo",3],
-["Psicología del Consumidor",2],
-["Teoría de la Investigación",3],
-["Introducción a la Economía",3],
-["Cálculo Diferencial e Integral",3]
-]},
-{n:2,m:[
-["Comportamiento del Consumidor",2],
-["Metodología de la Investigación",3],
-["Microeconomía",3],
-["Álgebra de Matrices y Prog. Lineal",3],
-["Administración",2]
-]},
-{n:3,m:[
-["Legislación Comercial",3],
-["Gerencia del Producto",3],
-["Macroeconomía",3],
-["Estadística I",3],
-["Contabilidad Financiera",2],
-["Práctica Investigativa",5]
-]},
-{n:4,m:[
-["Mercadeo de Servicios",3],
-["Gerencia de Precio",3],
-["Laboratorio del Consumidor",3],
-["Economía Colombiana",3],
-["Estadística II",3],
-["Práctica Investigativa",0]
-]},
-{n:5,m:[
-["Mix de Comunicación",3],
-["Empaques y Embalajes",3],
-["Green Marketing",2],
-["Sistema de Información de Mercados",3],
-["Matemática Financiera",3],
-["Práctica Investigativa",0]
-]},
-{n:6,m:[
-["Mercadeo Promocional",3],
-["Publicidad",3],
-["Empresarismo",2],
-["Mercadeo Electrónico",3],
-["Investigación Cualitativa",3],
-["Práctica Investigativa",0]
-]},
-{n:7,m:[
-["Mercadeo Internacional I",3],
-["Investigación Cuantitativa",3],
-["Mercadeo Estratégico",3],
-["Formulación de Proyectos",3],
-["Electiva de Profundización",3]
-]},
-{n:8,m:[
-["Mercadeo Internacional II",3],
-["Gerencia de Marca",3],
-["Gerencia de Ventas",3],
-["Seminario Trabajo de Grado",3],
-["Electiva de Profundización",3]
-]},
-{n:9,m:[
-["Plan Estratégico de Mercadeo",3],
-["Inteligencia de Mercados",3],
-["Gerencia de Distribución",3],
-["Negocios Internacionales",3],
-["Electiva de Profundización",3]
-]},
-{n:10,m:[
-["Práctica Profesional",11]
-]}
+const semestres=[
+{n:1,m:[["Fundamentos de Mercadeo",3],["Psicología del Consumidor",2],["Teoría de la Investigación",3],["Introducción a la Economía",3],["Cálculo Diferencial e Integral",3]]},
+{n:2,m:[["Comportamiento del Consumidor",2],["Metodología de la Investigación",3],["Microeconomía",3],["Álgebra de Matrices y Prog. Lineal",3],["Administración",2]]},
+{n:3,m:[["Legislación Comercial",3],["Gerencia del Producto",3],["Macroeconomía",3],["Estadística I",3],["Contabilidad Financiera",2],["Práctica Investigativa",5]]},
+{n:4,m:[["Mercadeo de Servicios",3],["Gerencia de Precio",3],["Laboratorio del Consumidor",3],["Economía Colombiana",3],["Estadística II",3]]},
+{n:5,m:[["Mix de Comunicación",3],["Empaques y Embalajes",3],["Green Marketing",2],["Sistema de Información de Mercados",3],["Matemática Financiera",3]]},
+{n:6,m:[["Mercadeo Promocional",3],["Publicidad",3],["Empresarismo",2],["Mercadeo Electrónico",3],["Investigación Cualitativa",3]]},
+{n:7,m:[["Mercadeo Internacional I",3],["Investigación Cuantitativa",3],["Mercadeo Estratégico",3],["Formulación de Proyectos",3],["Electiva de Profundización",3]]},
+{n:8,m:[["Mercadeo Internacional II",3],["Gerencia de Marca",3],["Gerencia de Ventas",3],["Seminario Trabajo de Grado",3],["Electiva de Profundización",3]]},
+{n:9,m:[["Plan Estratégico de Mercadeo",3],["Inteligencia de Mercados",3],["Gerencia de Distribución",3],["Negocios Internacionales",3],["Electiva de Profundización",3]]},
+{n:10,m:[["Práctica Profesional",11]]}
 ];
 
 const cont=document.getElementById("malla");
 
 semestres.forEach(s=>{
-let d=document.createElement("div");
-d.className="semestre";
-d.innerHTML=`<h2>Semestre ${s.n}</h2>`;
-s.m.forEach(m=>{
-let row=document.createElement("div");
-row.className="materia";
-row.innerHTML=`<label><input type="checkbox" data-creditos="${m[1]}"> ${m[0]}</label><span>${m[1]} cr</span>`;
-d.appendChild(row);
-});
-cont.appendChild(d);
+  let d=document.createElement("div");
+  d.className="semestre";
+  d.innerHTML=`<h2>💖 Semestre ${s.n}</h2>`;
+  s.m.forEach(m=>{
+    let row=document.createElement("div");
+    row.className="materia";
+    row.innerHTML=`<label><input type="checkbox" data-creditos="${m[1]}"> ${m[0]}</label><span>${m[1]} cr</span>`;
+    d.appendChild(row);
+  });
+  cont.appendChild(d);
 });
 
 const checks=document.querySelectorAll("input[type=checkbox]");
 checks.forEach(c=>c.addEventListener("change",actualizar));
 
 function actualizar(){
-let total=0;
-checks.forEach(c=>{if(c.checked) total+=Number(c.dataset.creditos)});
-document.getElementById("barra").value=total;
-document.getElementById("porcentaje").innerText=Math.round(total/165*100)+"% completado";
+  let total=0;
+  checks.forEach(c=>{if(c.checked) total+=Number(c.dataset.creditos)});
+  document.getElementById("barra").value=total;
+  document.getElementById("porcentaje").innerText=Math.round(total/165*100)+"% completado 💕";
 }
 </script>
 
