--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <style>
 body{
   font-family:'Poppins',sans-serif;
-  background:linear-gradient(180deg,#ffe4f1,#fff);
+  background:linear-gradient(180deg,#ffe4f1,#ffffff);
   padding:20px;
   color:#5a2a3c;
 }
 h1{text-align:center;color:#d63384;}
-h2{color:#c2185b;margin-bottom:8px}
+h2{color:#c2185b}
 .semestre{
   background:#fff0f6;
   border-radius:24px;
-  padding:15px;
+  padding:16px;
   margin-bottom:20px;
   box-shadow:0 8px 18px rgba(214,51,132,.2);
 }
@@ -27,12 +27,19 @@ h2{color:#c2185b;margin-bottom:8px}
   padding:8px 12px;
   margin:6px 0;
   border-radius:14px;
-  background:#fff;
+  background:#ffffff;
 }
 .materia.bloqueada{opacity:.4}
 input[type=checkbox]{
   accent-color:#d63384;
   transform:scale(1.2);
+}
+.resumen{
+  background:#ffe9f4;
+  padding:16px;
+  border-radius:22px;
+  margin-bottom:20px;
+  text-align:center;
 }
 progress{
   width:100%;
@@ -43,19 +50,12 @@ progress::-webkit-progress-bar{background:#ffd6e8}
 progress::-webkit-progress-value{
   background:linear-gradient(90deg,#ff9acb,#d63384)
 }
-.resumen{
-  background:#ffe9f4;
-  padding:15px;
-  border-radius:20px;
-  margin-bottom:20px;
-  text-align:center;
-}
 </style>
 </head>
 
 <body>
 
-<h1>🎀 Malla Curricular Mercadeo 🎀</h1>
+<h1>🎀 Malla Curricular – Mercadeo 🎀</h1>
 
 <div class="resumen">
   <progress id="barra" value="0" max="165"></progress>
@@ -66,86 +66,124 @@ progress::-webkit-progress-value{
 
 <div id="malla"></div>
 
-<h2>💗 Humanísticas, Electivas y Complementarias</h2>
+<h2>💗 Humanísticas, Competencias y Requisitos</h2>
 <div class="semestre">
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Formación Humanística – Humanismo</label><span>2</span></div>
-  <div class="materia"><label><input type="checkbox" data-creditos="2"> Cultura artística y física</label><span>2</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="2"> Cultura artística y cultura física</label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Formación ciudadana</label><span>2</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="2"> Problemáticas de contexto</label><span>2</span></div>
-  <div class="materia"><label><input type="checkbox" data-creditos="2"> Historia Política</label><span>2</span></div>
-  <div class="materia"><label><input type="checkbox" data-creditos="2"> Epistemología</label><span>2</span></div>
+
+  <div class="materia"><label><input type="checkbox" data-creditos="1"> Lectura y producción de textos I</label><span>1</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="1"> Lectura y producción de textos II</label><span>1</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="2"> Lenguaje y herramientas informáticas</label><span>2</span></div>
+
   <div class="materia"><label><input type="checkbox" data-creditos="4"> Ética y Compromiso Social</label><span>4</span></div>
   <div class="materia"><label><input type="checkbox" data-creditos="4"> Electivas de Complementación</label><span>4</span></div>
+
+  <div class="materia"><label><input type="checkbox" data-creditos="0"> Eficiencia en Inglés</label><span>Req.</span></div>
+  <div class="materia"><label><input type="checkbox" data-creditos="0"> Trabajo de Grado</label><span>Req.</span></div>
 </div>
 
 <script>
-const totalCreditos=165;
+const TOTAL=165;
 
 const materias=[
-{ id:"eco", s:1, n:"Introducción a la Economía", c:3 },
-{ id:"micro", s:2, n:"Microeconomía", c:3, r:["eco"] },
+/* SEMESTRE 1 */
+{id:"fund",s:1,n:"Fundamentos de Mercadeo",c:3},
+{id:"psi",s:1,n:"Psicología del Consumidor",c:2},
+{id:"teo",s:1,n:"Teoría de la Investigación",c:3},
+{id:"eco",s:1,n:"Introducción a la Economía",c:3},
+{id:"calc",s:1,n:"Cálculo Diferencial e Integral",c:3},
 
-{ id:"psi", s:1, n:"Psicología del Consumidor", c:2 },
-{ id:"comp", s:2, n:"Comportamiento del Consumidor", c:2, r:["psi"] },
+/* SEMESTRE 2 */
+{id:"comp",s:2,n:"Comportamiento del Consumidor",c:2,r:["psi"]},
+{id:"met",s:2,n:"Metodología de la Investigación",c:3},
+{id:"micro",s:2,n:"Microeconomía",c:3,r:["eco"]},
+{id:"alg",s:2,n:"Álgebra de Matrices y Prog. Lineal",c:3},
+{id:"adm",s:2,n:"Administración",c:2},
 
-{ id:"est1", s:3, n:"Estadística I", c:3 },
-{ id:"est2", s:4, n:"Estadística II", c:3, r:["est1"] },
+/* SEMESTRE 3 */
+{id:"leg",s:3,n:"Legislación Comercial",c:3},
+{id:"prod",s:3,n:"Gerencia del Producto",c:3},
+{id:"macro",s:3,n:"Macroeconomía",c:3},
+{id:"est1",s:3,n:"Estadística I",c:3},
+{id:"cont",s:3,n:"Contabilidad Financiera y de Costos",c:2},
+{id:"prac",s:3,n:"Practica investigativa",c:2},
 
-{ id:"fund", s:1, n:"Fundamentos de Mercadeo", c:3 },
-{ id:"mix", s:5, n:"Mix de Comunicación", c:3, r:["fund"] },
+/* SEMESTRE 4 */
+{id:"serv",s:4,n:"Mercadeo de Servicios",c:3},
+{id:"precio",s:4,n:"Gerencia de Precio",c:3,r:["comp"]},
+{id:"lab",s:4,n:"Laboratorio del Consumidor",c:3},
+{id:"col",s:4,n:"Economía Colombiana",c:3},
+{id:"est2",s:4,n:"Estadística II",c:3,r:["est1"]},
+{id:"prac",s:3,n:"Practica investigativa",c:2},
 
-{ id:"emp", s:5, n:"Empaques y Embalajes", c:3, r:["fund"] },
+/* SEMESTRE 5 */
+{id:"mix",s:5,n:"Mix de Comunicación",c:3,r:["fund"]},
+{id:"emp",s:5,n:"Empaques y Embalajes",c:3,r:["fund"]},
+{id:"green",s:5,n:"Green Marketing",c:2},
+{id:"sim",s:5,n:"Sistema de Información de Mercados",c:3},
+{id:"fin",s:5,n:"Matemática Financiera",c:3},
+{id:"prac",s:3,n:"Practica investigativa",c:1},
 
-{ id:"sim", s:5, n:"Sistema de Información de Mercados", c:3 },
-{ id:"qual", s:6, n:"Investigación de Mercados Cualitativa", c:3, r:["sim"] },
-{ id:"quant", s:7, n:"Investigación de Mercados Cuantitativa", c:3, r:["qual"] },
+/* SEMESTRE 6 */
+{id:"promo",s:6,n:"Mercadeo Promocional y Merchandising",c:3,r:["mix"]},
+{id:"pub",s:6,n:"Publicidad",c:3,r:["mix"]},
+{id:"empres",s:6,n:"Empresarismo e Idea de Negocios",c:2},
+{id:"elec",s:6,n:"Mercadeo Electrónico",c:3},
+{id:"qual",s:6,n:"Investigación de Mercados Cualitativa",c:3,r:["sim"]},
 
-{ id:"prod", s:3, n:"Gerencia del Producto", c:3 },
-{ id:"marca", s:8, n:"Gerencia de Marca", c:3, r:["prod"] },
+/* SEMESTRE 7 */
+{id:"int1",s:7,n:"Mercadeo Internacional I",c:3},
+{id:"quant",s:7,n:"Investigación de Mercados Cuantitativa",c:3,r:["qual"]},
+{id:"estr",s:7,n:"Mercadeo Estratégico",c:3},
+{id:"proy",s:7,n:"Formulación y Evaluación de Proyectos",c:3,r:["fin"]},
+{id:"elec7",s:7,n:"Electiva de Profundización",c:3},
 
-{ id:"int1", s:7, n:"Mercadeo Internacional I", c:3 },
-{ id:"int2", s:8, n:"Mercadeo Internacional II", c:3, r:["int1"] },
+/* SEMESTRE 8 */
+{id:"int2",s:8,n:"Mercadeo Internacional II",c:3,r:["int1"]},
+{id:"marca",s:8,n:"Gerencia de Marca",c:3,r:["prod"]},
+{id:"ventas",s:8,n:"Gerencia de Ventas",c:3,r:["estr"]},
+{id:"semin",s:8,n:"Seminario de Trabajo de Grado",c:3,r:["met"]},
+{id:"elec8",s:8,n:"Electiva de Profundización",c:3},
 
-{ id:"fin", s:5, n:"Matemática Financiera", c:3 },
-{ id:"proy", s:7, n:"Formulación y Evaluación de Proyectos", c:3, r:["fin"] },
+/* SEMESTRE 9 */
+{id:"plan",s:9,n:"Plan Estratégico de Mercadeo",c:3,r:["marca","ventas"]},
+{id:"intel",s:9,n:"Inteligencia de Mercados",c:3},
+{id:"dist",s:9,n:"Gerencia de Distribución y Logística",c:3},
+{id:"neg",s:9,n:"Negocios Internacionales",c:3},
+{id:"elec9",s:9,n:"Electiva de Profundización",c:3},
 
-{ id:"promo", s:6, n:"Mercadeo Promocional", c:3, r:["mix"] },
-{ id:"pub", s:6, n:"Publicidad", c:3, r:["mix"] },
-
-{ id:"estr", s:7, n:"Mercadeo Estratégico", c:3 },
-{ id:"ventas", s:8, n:"Gerencia de Ventas", c:3, r:["estr"] },
-
-{ id:"plan", s:9, n:"Plan Estratégico de Mercadeo", c:3, r:["marca","ventas"] },
-
-{ id:"prac", s:10, n:"Práctica Profesional", c:11 }
+/* SEMESTRE 10 */
+{id:"prac",s:10,n:"Práctica Profesional",c:11}
 ];
 
 const malla=document.getElementById("malla");
-const semestres={};
+const sem={};
 
 materias.forEach(m=>{
-  if(!semestres[m.s]){
-    semestres[m.s]=document.createElement("div");
-    semestres[m.s].className="semestre";
-    semestres[m.s].innerHTML=`<h2>🌸 Semestre ${m.s}</h2>`;
-    malla.appendChild(semestres[m.s]);
+  if(!sem[m.s]){
+    sem[m.s]=document.createElement("div");
+    sem[m.s].className="semestre";
+    sem[m.s].innerHTML=`<h2>🌸 Semestre ${m.s}</h2>`;
+    malla.appendChild(sem[m.s]);
   }
   const d=document.createElement("div");
   d.className="materia";
   d.id="box-"+m.id;
   d.innerHTML=`<label><input type="checkbox" id="${m.id}" data-creditos="${m.c}"> ${m.n}</label><span>${m.c}</span>`;
-  semestres[m.s].appendChild(d);
+  sem[m.s].appendChild(d);
 });
 
 function actualizar(){
-  let suma=0;
+  let sum=0;
   document.querySelectorAll("input[type=checkbox]").forEach(c=>{
-    if(c.checked) suma+=Number(c.dataset.creditos);
+    if(c.checked) sum+=Number(c.dataset.creditos);
   });
-  document.getElementById("barra").value=suma;
-  document.getElementById("avance").innerText=Math.round(suma/totalCreditos*100)+"% completado 💕";
-  document.getElementById("creditos").innerText="Créditos: "+suma+" / "+totalCreditos;
-  document.getElementById("faltan").innerText="Faltan: "+(totalCreditos-suma)+" créditos";
+  document.getElementById("barra").value=sum;
+  document.getElementById("avance").innerText=Math.round(sum/TOTAL*100)+"% completado 💕";
+  document.getElementById("creditos").innerText=`Créditos: ${sum} / ${TOTAL}`;
+  document.getElementById("faltan").innerText=`Faltan: ${TOTAL-sum} créditos`;
   desbloquear();
 }
 
