--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ progress::-webkit-progress-value{
 <div class="materia"><label><input type="checkbox" data-cr="2"> Herramientas informáticas</label><span>2</span></div>
 <div class="materia"><label><input type="checkbox" data-cr="4"> Ética y Compromiso Social</label><span>4</span></div>
 <div class="materia"><label><input type="checkbox" data-cr="4"> Electivas de Complementación</label><span>4</span></div>
+<div class="materia"><label><input type="checkbox" data-cr="2"> Epistemologia</label><span>2</span></div>
+<div class="materia"><label><input type="checkbox" data-cr="2"> Historia politica</label><span>2</span></div>
 </div>
 
 <script>
